--- a/Proyecto Final/experiencia.html
+++ b/Proyecto Final/experiencia.html
@@ -15,7 +15,7 @@
 	</ul>	
 	<h2>Experiencia</h2>
 	<h3>Video de Habilidades e Intereses</h3>
-	<video src="videos/video.mp4" title="Video completo de Habilidades e Intereses" controls width="400px"></video>
+	<video src="videos/video.mp4" title="Video completo de Habilidades e Intereses" controls width="500px"></video>
 	<br/>
 	Video completo de Habilidades e Intereses
 	<h3>Audio de Hobbies y Actividades</h3>
@@ -26,14 +26,14 @@
 <footer>
 	<h3>Datos de contacto:</h3>
 	<ul>
-		<li>Teléfono de contacto: 315 205 6865</li>
-		<li>Correo electrónico: <a href="mailto:rainercastro@aol.com">rainercastro@aol.com</a></li>
-		<li>Redes sociales:</li>
+		<li><b>Teléfono de contacto:</b> 315 205 6865</li>
+		<li><b>Correo electrónico:</b> <a href="mailto:rainercastro@aol.com">rainercastro@aol.com</a></li>
+		<li><b>Redes sociales:</b></li>
 		<ul>
 			<li><a href="https://www.facebook.com">Facebook</a></li>
 			<li><a href="https://www.twitter.com">Twitter</a></li>	
 		</ul>
-		<li>Dirección: Carrera 64 # 96 - 70 Bogotá, Colombia</li>	
+		<li><b>Dirección:</b> Carrera 64 # 96 - 70 Bogotá, Colombia</li>
 	</ul>
 </footer>
 </html>
