--- a/Proyecto Final/index.html
+++ b/Proyecto Final/index.html
@@ -8,10 +8,11 @@
 	<h1>Hoja de vida</h1>
 	<h2>Rainer Castro</h2>
 	<h3>Octubre 26 de 1989 - Bogotá, Colombia</h3>
-	<a href="index.html">Inicio</a> -
-	<a href="educacion.html">Educación</a> -
-	<a href="experiencia.html">Experiencia</a>
-	<br/>
+	<ul>
+		<li><a href="index.html">Inicio</a></li>
+		<li><a href="educacion.html">Educación</a></li>
+		<li><a href="experiencia.html">Experiencia</a></li>
+	</ul>
 	<h2>Información Personal</h2>
 	<img src="img/foto-de-perfil.jpg" title="Foto de Perfil" width="150px" height="150px" alt="Foto de perfil">
 	<h3>Perfil:</h3>
@@ -27,14 +28,14 @@
 <footer>
 	<h3>Datos de contacto:</h3>
 	<ul>
-		<li>Teléfono de contacto: 315 205 6865</li>
-		<li>Correo electrónico: <a href="mailto:rainercastro@aol.com">rainercastro@aol.com</a></li>
-		<li>Redes sociales:</li>
+		<li><b>Teléfono de contacto:</b> 315 205 6865</li>
+		<li><b>Correo electrónico:</b> <a href="mailto:rainercastro@aol.com">rainercastro@aol.com</a></li>
+		<li><b>Redes sociales:</b></li>
 		<ul>
 			<li><a href="https://www.facebook.com">Facebook</a></li>
 			<li><a href="https://www.twitter.com">Twitter</a></li>	
 		</ul>
-		<li>Dirección: Carrera 64 # 96 - 70 Bogotá, Colombia</li>	
+		<li><b>Dirección:</b> Carrera 64 # 96 - 70 Bogotá, Colombia</li>	
 	</ul>
 </footer>
 </html>
